2017-08-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* doc/pyplots/plot_density.py,
	  doc/pyplots/plot_difference.py,
	  doc/pyplots/plot_phase.py,
	  doc/pyplots/plot_speed.py,
	  doc/pyplots/plot_temperature.py,
	  doc/pyplots/plot_velocity.py,
	  doc/pyplots/stylesheet_gallery.py:

	Do not import typhon.plots explicitly as it is imported using
	every typhon import.

	Use the rasterized option when using `pcolormesh`. This should
	decrease the build time significantly.

2017-08-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* doc/typhon.math.rst: Added `squeezable_logspace`.

	* typhon/math/common.py (squeezable_logspace):

	Added examples and fixed broken markup in docstring.

2017-08-26  Lukas Kluft  <lukas.kluft@gmail.com>

	Fixed documentation with and without ARTS API.

	* doc/typhon.arts.rst, doc/typhon.arts.workspace.rst:

	Moved documentation of workspace module to separate file.
	This file can be excluded when the documentation is build
	without ARTS API.

	Fixed references for automodules for some modules (most likely
	copy and paste remnants.)

	* doc/conf.py:

	Exclude `typhon.arts.workspace.rst` for builds without ARTS API.

	Removed shlex from list of imports as it was not used.

	* doc/modules.rst: Include typhon.arts.workspace to toctree.

2017-08-26  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>

	Fixed some problems with passing parameters when calling WSMs
	and added functionality to define agendas using python function syntax.

	* typhon/arts/workspace/__init__.py:
	- Export arts_agenda decorator

	* typhon/arts/workspace/agendas.py:
	- methods to clear agendas and add WSMs to them
	- method to convert agendas to VariableValueStruct

	* typhon/arts/workspace/api.py:
	- Add generic interface to convert python object to VariableValueStructs
	- Add declarations for new methods in C API

	* typhon/arts/workspace/methods.py:
	- Separate parsing and parameter lookup from actual WSM call to facilitate reuse

	* typhon/arts/workspace/variables.py: